--- a/localization/german/DP_traits_l_german.yml
+++ b/localization/german/DP_traits_l_german.yml
@@ -1,23 +1,23 @@
 ﻿l_german:
  # Daddy Pika Traits
- trait_nnn_challenger:0 "NNN Challenger"
- trait_nnn_challenger_desc:0 "This character has the willpower to survive NNN. If you can survive that, you can survive anything. Even a bus."
- trait_nnn_challenger_character_desc:0 "[ROOT.GetCharacter.GetFirstNameNoTooltip] has the willpower to survive NNN. If you can survive that, you can survive anything. Even a bus."
- trait_build_speed_cheat:0 "Ask God to build stuff"
- trait_build_speed_cheat_desc:0 "God has enabled hacking mode."
- trait_build_speed_cheat_character_desc:0 "[ROOT.GetCharacter.GetFirstNameNoTooltip] asks God to build things."
- trait_stress_gain_remove:0 "Watch Spiff"
- trait_stress_gain_remove_desc:0 "This character watches Spiff, and thus removes all stress, as it should be."
- trait_stress_gain_remove_character_desc:0 "[ROOT.GetCharacter.GetFirstNameNoTooltip] watches Spiff, and thus removes all stress, as it should be."
- trait_tyranny_gain_remove:0 "Lawyer Army"
- trait_tyranny_gain_remove_desc:0 "This character hires copious amounts of lawyers to justify everything."
- trait_tyranny_gain_remove_character_desc:0 "[ROOT.GetCharacter.GetFirstNameNoTooltip] hires copious amounts of lawyers to justify everything."
- trait_boost_stats:0 "Boost Stats"
- trait_boost_stats_desc:0 "Increases all stats by 50."
- trait_boost_stats_character_desc:0 "[ROOT.GetCharacter.GetFirstNameNoTooltip] is a legend with overpowered stats."
- trait_100_stat_man:0 "100 Stat Man"
- trait_100_stat_man_desc:0 "This is a legend among legends, genius among geniuses. You cannot win against this character, you need to accept your fate."
- trait_100_stat_man_character_desc:0 "[ROOT.GetCharacter.GetFirstNameNoTooltip] is a legend among legends, genius among geniuses. You cannot win against this character, you need to accept your fate."
- trait_immortal:0 "Immortal"
- trait_immortal_desc:0 "Your character is immortal."
- trait_immortal_character_desc:0 "[ROOT.GetCharacter.GetFirstNameNoTooltip] is immortal."
+ trait_nnn_challenger:0 "NNN Herausforderer"
+ trait_nnn_challenger_desc:0 "Dieser Charakter hat die Willenskraft, NNN zu überleben. Wenn Sie das überstehen können, können Sie alles überstehen. Sogar einen Bus."
+ trait_nnn_challenger_character_desc:0 "[ROOT.GetCharacter.GetFirstNameNoTooltip] hat die Willenskraft, NNN zu überleben. Wenn Sie das überstehen können, können Sie alles überstehen. Sogar einen Bus."
+ trait_build_speed_cheat:0 "Gott um Hilfe beim Bauen bitten"
+ trait_build_speed_cheat_desc:0 "Gott hat den Hacking-Modus aktiviert."
+ trait_build_speed_cheat_character_desc:0 "[ROOT.GetCharacter.GetFirstNameNoTooltip] bittet Gott um Hilfe beim Bauen."
+ trait_stress_gain_remove:0 "Spiff ansehen"
+ trait_stress_gain_remove_desc:0 "Dieser Charakter sieht Spiff an und entfernt dadurch jeglichen Stress, so wie es sein sollte."
+ trait_stress_gain_remove_character_desc:0 "[ROOT.GetCharacter.GetFirstNameNoTooltip] sieht Spiff an und entfernt dadurch jeglichen Stress, so wie es sein sollte."
+ trait_tyranny_gain_remove:0 "Anwaltsarmee"
+ trait_tyranny_gain_remove_desc:0 "Dieser Charakter stellt Unmengen von Anwälten ein, um alles zu rechtfertigen."
+ trait_tyranny_gain_remove_character_desc:0 "[ROOT.GetCharacter.GetFirstNameNoTooltip] stellt Unmengen von Anwälten ein, um alles zu rechtfertigen."
+ trait_boost_stats:0 "Statistik steigern"
+ trait_boost_stats_desc:0 "Erhöht alle Statistiken um 50."
+ trait_boost_stats_character_desc:0 "[ROOT.GetCharacter.GetFirstNameNoTooltip] ist eine Legende mit übermächtigen Statistiken."
+ trait_100_stat_man:0 "100 Statistik-Mann"
+ trait_100_stat_man_desc:0 "Dies ist eine Legende unter Legenden, ein Genie unter Genies. Gegen diesen Charakter können Sie nicht gewinnen, Sie müssen Ihr Schicksal akzeptieren."
+ trait_100_stat_man_character_desc:0 "[ROOT.GetCharacter.GetFirstNameNoTooltip] ist eine Legende unter Legenden, ein Genie unter Genies. Gegen diesen Charakter können Sie nicht gewinnen, Sie müssen Ihr Schicksal akzeptieren."
+ trait_immortal:0 "Unsterblich"
+ trait_immortal_desc:0 "Ihr Charakter ist unsterblich."
+ trait_immortal_character_desc:0 "[ROOT.GetCharacter.GetFirstNameNoTooltip] ist unsterblich."
