--- a/localization/german/LIT_scripted_effects_l_german.yml
+++ b/localization/german/LIT_scripted_effects_l_german.yml
@@ -1,5 +1,5 @@
 ﻿l_german:
 ### LITHANE Scripted Effects
 
- LIT_learned_trait_check_max_TT:1 "This trait is already max level."
- LIT_learned_trait_check_missing_TT:1 "The selected character doesn't have this trait."
+ LIT_learned_trait_check_max_TT:1 "Diese Eigenschaft hat bereits das maximale Level erreicht."
+ LIT_learned_trait_check_missing_TT:1 "Der ausgewählte Charakter besitzt diese Eigenschaft nicht."
