--- a/localization/german/DP_interactions_l_german.yml
+++ b/localization/german/DP_interactions_l_german.yml
@@ -1,138 +1,139 @@
 ﻿l_german:
- # Interaction Cheats
- interaction_category_cheat_menu:0 "Daddy Pika's Cheat Menu"
- CHEAT_ACTIONS:0 "DaddyPika's cheat menu offers it all!"
+ #Interaktions-Cheats
  
- open_daddy_pika_cheat_menu:0 "Open Menu"
- close_daddy_pika_cheat_menu:0 "Close Menu"
- daddy_pika_cheat_menu_desc:0 "Daddy Pika's Cheat Menu offers it all!"
+ interaction_category_cheat_menu:0 "Daddy Pika's Cheat-Menü"
+ CHEAT_ACTIONS:0 "DaddyPikas Cheat-Menü bietet alles!"
  
- dp_sex_interaction.t:0 "Sleep With Character"
- dp_sex_interaction:0 "Sleep With Character"
- daddy_pika_edit_character:0 "Character Editor"
- daddy_pika_edit_character_desc:0 "DaddyPika's editpr menu is filled to the brim with options to customize anyone."
- daddy_pika_character_currency_menu:0 "Currency Menu"
- daddy_pika_character_currency_menu_desc:0 "Opens options to add gold, prestige, piety, and renown."
- daddy_pika_murder:0 "Murder"
- daddy_pika_murder_desc:0 "Murder any unsuspecting character..."
- daddy_pika_extermination_process:0 "Dynasty Killer"
- daddy_pika_extermination_process_desc:0 "Adds two options, save from extinction, and the Dyansty Killer. These tools allow you to murder off entire dynasties, and keep some select alive. NOT COMPLETELY FUNCTIONAL, TRY AT OWN RISK."
- daddy_pika_designate_survivors:0 "Save from extinction"
- daddy_pika_designate_survivors_desc:0 "Save from being killed by the Dynasty Killer."
- daddy_pika_murder_off_dynasty:0 "Finalize Dyansty Killer"
- daddy_pika_murder_off_dynasty_desc:0 "Finalize Dyansty Killer"
- daddy_pika_marry:0 "Force Marriage"
- daddy_pika_marry_desc:0 "Marry a character without their consent."
- daddy_pika_befriend:0 "Add Friend"
- daddy_pika_befriend_desc:0 "Befriend someone without their knowledge."
- daddy_pika_unfriend:0 "Remove Friend"
- daddy_pika_unfriend_desc:0 "It's time to go."
- daddy_pika_make_lover:0 "Add Lover"
- daddy_pika_make_lover_desc:0 "Make love with cheats."
- daddy_pika_remove_lover:0 "Remove Lover"
- daddy_pika_remove_lover_desc:0 "Remove this lover."
- daddy_pika_make_soulmate:0 "Add Soulmate"
- daddy_pika_make_soulmate_desc:0 "Make this character your soulmate."
- daddy_pika_remove_soulmate:0 "Remove Soulmate"
- daddy_pika_remove_soulmate_desc:0 "It's time to go."
- daddy_pika_make_rival:0 "Add Rivalry"
- daddy_pika_make_rival_desc:0 "Adds a rivalry to this character."
- daddy_pika_remove_rival:0 "Remove Rivalry"
- daddy_pika_remove_rival_desc:0 "Removes the rivalry between your character."
- daddy_pika_imprison:0 "Imprison"
- daddy_pika_imprison_desc:0 "Imprison any character."
- daddy_pika_commit_suicide:0 "Commit Suicide"
- daddy_pika_commit_suicide_desc:0 "End this character's life."
- daddy_pika_excommunicate:0 "Excommunicate"
- daddy_pika_excommunicate_desc:0 "Excommunicate this character."
- daddy_pika_remove_excommunication:0 "Remove Excommunication"
- daddy_pika_remove_excommunication_desc:0 "Remove excommunication from this character"
- daddy_pika_change_religion:0 "Change Religion"
- daddy_pika_change_religion_desc:0 "Change Character's Religious Beliefs."
- daddy_pika_change_culture:0 "Change Culture"
- daddy_pika_change_culture_desc:0 "Change this character's background."
- daddy_pika_change_dynasty:0 "Change House"
- daddy_pika_change_dynasty_desc:0 "Change this character's house to yours!"
- daddy_pika_change_character:0 "Change Character"
- daddy_pika_change_character_desc:0 "Play any character in the game!"
- daddy_pika_boost_stats:0 "Boost Stats"
- daddy_pika_boost_stats_desc:0 "Boost stats of any character by 25. Click again to remove!"
- daddy_pika_add_strong_hook:0 "Add Strong Hook"
- daddy_pika_add_strong_hook_desc:0 "Adds a strong hook to blackmail people with."
- daddy_pika_secrets_in_realm:0 "Add Secrets to Realm"
- daddy_pika_secrets_in_realm_desc:0 "This adds secrets to your vassals and courtiers so you can blackmail them."
- daddy_pika_add_to_court:0 "Add to Court"
- daddy_pika_add_to_court_desc:0 "Add to Court"
- daddy_pika_designate_survivors_remove:0 "Remove from Saving"
- daddy_pika_designate_survivors_remove_desc:0 "Sorry, I don't want you anymore."
- daddy_pika_impregnate_cheat:0 "Impregnate"
- daddy_pika_impregnate_cheat_desc:0 "Impregnate this woman."
- daddy_pika_designate_heir:0 "Designate Heir"
- daddy_pika_designate_heir_desc:0 "Designate this person as your heir."
- daddy_pika_adopt:0 "Adopt this person into the family."
+ open_daddy_pika_cheat_menu:0 "Menü öffnen"
+ close_daddy_pika_cheat_menu:0 "Menü schließen"
+ daddy_pika_cheat_menu_desc:0 "Daddy Pika's Cheat-Menü bietet alles!"
+ 
+ dp_sex_interaction.t:0 "Schlafen mit Charakter"
+ dp_sex_interaction:0 "Schlafen mit Charakter"
+ daddy_pika_edit_character:0 "Charakter-Editor"
+ daddy_pika_edit_character_desc:0 "DaddyPikas Editor-Menü ist randvoll mit Optionen zur Anpassung von jedem."
+ daddy_pika_character_currency_menu:0 "Währungsmenü"
+ daddy_pika_character_currency_menu_desc:0 "Öffnet Optionen zum Hinzufügen von Gold, Prestige, Frömmigkeit und Ruhm."
+ daddy_pika_murder:0 "Mord"
+ daddy_pika_murder_desc:0 "Mord an jedem ahnungslosen Charakter..."
+ daddy_pika_extermination_process:0 "Dynastie-Killer"
+ daddy_pika_extermination_process_desc:0 "Fügt zwei Optionen hinzu, Rettung vor dem Aussterben und den Dynastie-Killer. Diese Werkzeuge ermöglichen es Ihnen, ganze Dynastien auszulöschen und einige auszuwählen, die am Leben bleiben sollen. NICHT VOLLSTÄNDIG FUNKTIONSFÄHIG, AUF EIGENE GEFAHR VERSUCHEN."
+ daddy_pika_designate_survivors:0 "Rettung vor dem Aussterben"
+ daddy_pika_designate_survivors_desc:0 "Rettung vor dem Dynastie-Killer."
+ daddy_pika_murder_off_dynasty:0 "Dynastie-Killer abschließen"
+ daddy_pika_murder_off_dynasty_desc:0 "Dynastie-Killer abschließen"
+ daddy_pika_marry:0 "Zwangsheirat"
+ daddy_pika_marry_desc:0 "Heiraten Sie einen Charakter ohne deren Einwilligung."
+ daddy_pika_befriend:0 "Freund hinzufügen"
+ daddy_pika_befriend_desc:0 "Freunden Sie sich ohne deren Wissen an."
+ daddy_pika_unfriend:0 "Freund entfernen"
+ daddy_pika_unfriend_desc:0 "Es ist Zeit zu gehen."
+ daddy_pika_make_lover:0 "Geliebte hinzufügen"
+ daddy_pika_make_lover_desc:0 "Lieben Sie mit Cheats."
+ daddy_pika_remove_lover:0 "Geliebte entfernen"
+ daddy_pika_remove_lover_desc:0 "Entfernen Sie diesen Liebhaber."
+ daddy_pika_make_soulmate:0 "Seelenverwandten hinzufügen"
+ daddy_pika_make_soulmate_desc:0 "Machen Sie diesen Charakter zu Ihrem Seelenverwandten."
+ daddy_pika_remove_soulmate:0 "Seelenverwandten entfernen"
+ daddy_pika_remove_soulmate_desc:0 "Es ist Zeit zu gehen."
+ daddy_pika_make_rival:0 "Rivalität hinzufügen"
+ daddy_pika_make_rival_desc:0 "Fügt diesem Charakter eine Rivalität hinzu."
+ daddy_pika_remove_rival:0 "Rivalität entfernen"
+ daddy_pika_remove_rival_desc:0 "Entfernt die Rivalität zwischen Ihrem Charakter."
+ daddy_pika_imprison:0 "Inhaftieren"
+ daddy_pika_imprison_desc:0 "Inhaftieren Sie jeden Charakter."
+ daddy_pika_commit_suicide:0 "Selbstmord begehen"
+ daddy_pika_commit_suicide_desc:0 "Beenden Sie das Leben dieses Charakters."
+ daddy_pika_excommunicate:0 "Exkommunikation"
+ daddy_pika_excommunicate_desc:0 "Exkommunizieren Sie diesen Charakter."
+ daddy_pika_remove_excommunication:0 "Exkommunikation aufheben"
+ daddy_pika_remove_excommunication_desc:0 "Exkommunikation von diesem Charakter aufheben."
+ daddy_pika_change_religion:0 "Religion ändern"
+ daddy_pika_change_religion_desc:0 "Ändern Sie die religiösen Überzeugungen des Charakters."
+ daddy_pika_change_culture:0 "Kultur ändern"
+ daddy_pika_change_culture_desc:0 "Ändern Sie die Herkunft dieses Charakters."
+ daddy_pika_change_dynasty:0 "Haus ändern"
+ daddy_pika_change_dynasty_desc:0 "Ändern Sie das Haus dieses Charakters in Ihres!"
+ daddy_pika_change_character:0 "Charakter ändern"
+ daddy_pika_change_character_desc:0 "Spielen Sie jeden Charakter im Spiel!"
+ daddy_pika_boost_stats:0 "Statistiken steigern"
+ daddy_pika_boost_stats_desc:0 "Steigern Sie die Statistiken eines Charakters um 25. Klicken Sie erneut, um sie zu entfernen!"
+ daddy_pika_add_strong_hook:0 "Starker Hebel hinzufügen"
+ daddy_pika_add_strong_hook_desc:0 "Fügt einen starken Hebel hinzu, um Menschen zu erpressen."
+ daddy_pika_secrets_in_realm:0 "Geheimnisse im Reich hinzufügen"
+ daddy_pika_secrets_in_realm_desc:0 "Dies fügt Geheimnisse zu Ihren Vasallen und Hofleuten hinzu, damit Sie sie erpressen können."
+ daddy_pika_add_to_court:0 "Zum Hof hinzufügen"
+ daddy_pika_add_to_court_desc:0 "Zum Hof hinzufügen"
+ daddy_pika_designate_survivors_remove:0 "Von der Rettung entfernen"
+ daddy_pika_designate_survivors_remove_desc:0 "Entschuldigung, ich möchte dich nicht mehr."
+ daddy_pika_impregnate_cheat:0 "Schwängern"
+ daddy_pika_impregnate_cheat_desc:0 "Schwängern Sie diese Frau."
+ daddy_pika_designate_heir:0 "Erben bestimmen"
+ daddy_pika_designate_heir_desc:0 "Bestimmen Sie diese Person als Ihren Erben."
+ daddy_pika_adopt:0 "Diese Person in die Familie aufnehmen."
  daddy_pika_adopt_f:0 "Adoption"
  daddy_pika_adopt_m:0 "Adoption"
- daddy_pika_disown:0 "Disown"
- daddy_pika_disown_desc:0 "Disown this person."
- daddy_pika_concubine_cheat:0 "Add Concubine"
- daddy_pika_concubine_cheat_desc:0 "Character becomes a concubine."
- divorce_character_cheat:0 "Divorce Character"
+ daddy_pika_disown:0 "Verstoßen"
+ daddy_pika_disown_desc:0 "Diese Person verstoßen."
+ daddy_pika_concubine_cheat:0 "Konkubine hinzufügen"
+ daddy_pika_concubine_cheat_desc:0 "Der Charakter wird zur Konkubine."
+ divorce_character_cheat:0 "Charakter scheiden lassen"
  divorce_character_cheat_desc:0 ""
- daddy_pika_claim_title:0 "Claim land"
- daddy_pika_claim_title_desc:0 "Claim this character's land."
- daddy_pika_usurpy_surp:0 "Take Title"
- daddy_pika_usurpy_surp_desc:0 "Take this character's title."
- daddy_pika_char_modify_vassal_contract_inter:0 "Change Contract"
- daddy_pika_char_modify_vassal_contract_inter_desc:0 "Modify your vassal without the ridiculous penalties."
- daddy_pika_vassal_mod_vassal_contract_inter:0 "Change Contract"
- daddy_pika_vassal_mod_vassal_contract_inter_desc:0 "Modify your vassal without the ridiculous penalities."
- daddy_pika_revoke_title:0 "Revoke Title"
- daddy_pika_revoke_title_desc:0 "Revoke titles of vassals who deserve it."
- daddy_pika_offer_vassal_inter:0 "Vassalize Title"
- daddy_pika_offer_vassal_inter_desc:0 "Vassalize anyone under your title."
- daddy_pika_character_spawner:0 "Character Spawner"
- daddy_pika_character_spawner_desc:0 "Spawn useful characters to your realm."
- daddy_pika_arrange_marriage_inter:0 "Force Marriage"
- daddy_pika_arrange_marriage_inter_desc:0 "Force any marriage to happen."
- actor_secondary_daddy_pika_arrange_marriage_inter:0 "Spouse"
- daddy_pika_confirm:0 "Affirmative"
+ daddy_pika_claim_title:0 "Titel beanspruchen"
+ daddy_pika_claim_title_desc:0 "Diesen Titel des Charakters beanspruchen."
+ daddy_pika_usurpy_surp:0 "Titel ergreifen"
+ daddy_pika_usurpy_surp_desc:0 "Den Titel dieses Charakters ergreifen."
+ daddy_pika_char_modify_vassal_contract_inter:0 "Vertrag ändern"
+ daddy_pika_char_modify_vassal_contract_inter_desc:0 "Ändern Sie den Vertrag mit Ihrem Vasallen, ohne die lächerlichen Strafen."
+ daddy_pika_vassal_mod_vassal_contract_inter:0 "Vertrag ändern"
+ daddy_pika_vassal_mod_vassal_contract_inter_desc:0 "Ändern Sie den Vertrag mit Ihrem Vasallen, ohne die lächerlichen Strafen."
+ daddy_pika_revoke_title:0 "Titel entziehen"
+ daddy_pika_revoke_title_desc:0 "Titel von Vasallen entziehen, die es verdienen."
+ daddy_pika_offer_vassal_inter:0 "Titel vasallisieren"
+ daddy_pika_offer_vassal_inter_desc:0 "Jeden unter Ihrem Titel vasallisieren."
+ daddy_pika_character_spawner:0 "Charakter-Spawner"
+ daddy_pika_character_spawner_desc:0 "Nützliche Charaktere in Ihrem Reich erzeugen."
+ daddy_pika_arrange_marriage_inter:0 "Zwangsheirat"
+ daddy_pika_arrange_marriage_inter_desc:0 "Erzwingen Sie jede Ehe."
+ actor_secondary_daddy_pika_arrange_marriage_inter:0 "Ehepartner"
+ daddy_pika_confirm:0 "Zustimmung"
  
- open_daddypika_menu:0 "Open Daddy Pika's Menu"
- close_daddypika_menu:0 "Close Daddy Pika's Menu"
- open_daddypika_menu_desc:0 "This will open the corresponding menu."
- close_daddypika_menu_desc:0 "This will close the corresponding menu."
+ open_daddypika_menu:0 "Daddy Pika's Menü öffnen"
+ close_daddypika_menu:0 "Daddy Pika's Menü schließen"
+ open_daddypika_menu_desc:0 "Dies wird das entsprechende Menü öffnen."
+ close_daddypika_menu_desc:0 "Dies wird das entsprechende Menü schließen."
  
- conv_realm_religion_tt:0 "Religious Conversion"
- conv_realm_culture_tt:0 "Cultural Conversion"
- max_realm_development_TT:0 "Max Realm Development"
- max_realm_control_TT:0 "Max Realm Control"
- convert_realm_desc:0 "This will convert your realm."
- max_realm_desc:0 "This will max control or development in your realm."
+ conv_realm_religion_tt:0 "Religiöse Konversion"
+ conv_realm_culture_tt:0 "Kulturelle Konversion"
+ max_realm_development_TT:0 "Maximale Reichsentwicklung"
+ max_realm_control_TT:0 "Maximale Reichskontrolle"
+ convert_realm_desc:0 "Dies wird Ihr Reich konvertieren."
+ max_realm_desc:0 "Dies wird die Kontrolle oder Entwicklung in Ihrem Reich maximieren."
  are_you_sure_tt:0 "$generic_proceed$"
  
- change_suc_young:0 "Change Succession: Young"
- change_suc_old:0 "Change Succession: Old"
- change_suc_desc:0 "This will change your succession."
+ change_suc_young:0 "Änderung der Thronfolge: Jung"
+ change_suc_old:0 "Änderung der Thronfolge: Alt"
+ change_suc_desc:0 "Dies wird Ihre Thronfolge ändern."
  change_suc_tt:0 "$generic_proceed$"
  
- generic_proceed:0 "Are you sure you want to proceed?"
+ generic_proceed:0 "Sind Sie sicher, dass Sie fortfahren möchten?"
  
- change_govt_tribe:0 "Convert to Tribe"
- change_govt_clan:0 "Convert to Clan"
- change_govt_feudal:0 "Convert to Feudal"
- change_govt_desc:0 "Change your government type."
+ change_govt_tribe:0 "In Stamm umwandeln"
+ change_govt_clan:0 "In Clan umwandeln"
+ change_govt_feudal:0 "In Feudal umwandeln"
+ change_govt_desc:0 "Ihren Regierungstyp ändern."
  change_govt_tt:0 "$generic_proceed$"
  
  daddy_pika_GENERIC_EFFECT_DESC:0 ""
  
- title_army_spawn_menu:0 "Army Spawn"
- title_government_menu:0 "Government"
+ title_army_spawn_menu:0 "Armee erstellen"
+ title_government_menu:0 "Regierung"
  
  CONFIRM_OKAY:0 "Okay"
  
- manage_titles:0 "Manage Titles"
- manage_titles_desc:0 "Managing titles."
- manage_titles_interaction:0 "Manage Titles"
- manage_titles_interaction_desc:0 "Manage the selected title."
+ manage_titles:0 "Titel verwalten"
+ manage_titles_desc:0 "Titel verwalten."
+ manage_titles_interaction:0 "Titel verwalten"
+ manage_titles_interaction_desc:0 "Den ausgewählten Titel verwalten."
  
- CHEAT_MENU_ACTIONS:0 "This menu offers many cheats, all to enhance your game."
+ CHEAT_MENU_ACTIONS:0 "Dieses Menü bietet viele Cheats, um Ihr Spiel zu verbessern."
