--- a/localization/simp_chinese/event_localization/DP_char_editor_events_l_simp_chinese.yml
+++ b/localization/simp_chinese/event_localization/DP_char_editor_events_l_simp_chinese.yml
@@ -43,43 +43,44 @@
  dp_char_editor.traits.commander.d:0 "选择你要添加的将领特质。如果角色已经拥有此特质，再次点击将会移除"
  dp_char_editor.traits.health.t:1 "健康特质"
  dp_char_editor.traits.health.d:0 "选择你要添加的健康特质。如果角色已经拥有此特质，再次点击将会移除"
- dp_char_editor.traits.fame.t:1 "Fame Traits"
+ dp_char_editor.traits.fame.t:1 "名声特质"
  dp_char_editor.traits.infamy.t:1 "恶名特质"
  dp_char_editor.traits.lifestyle.t:1 "生活方式特质"
- dp_char_editor.traits.learned.t:1 "Learned Traits Add XP"
- dp_char_editor.traits.learned.d:1 "Choose a trait that you want to add xp to."
- dp_char_editor.traits.learned_TT:1 "Opens a menu that will allow you to pick learned traits to add xp to."
- dp_char_editor.traits.lifestyle_perk.t:1 "生活方式点数特质"
+ dp_char_editor.traits.lifestyle_TT:1 "打开一个菜单，允许您选择要添加或删除的生活方式特质" 
+ dp_char_editor.traits.learned.t:1 "已学习特质增加经验值"
+ dp_char_editor.traits.learned.d:1 "选择你要增加经验值的特质"
+ dp_char_editor.traits.learned_TT:1 "打开一个菜单，允许您选择要增加经验值的已学习特质"
+ dp_char_editor.traits.lifestyle_perk.t:1 "生活方式特质加点"
  dp_char_editor.traits.lifestyle_perk_diplomacy.t:1 "外交特质"
  dp_char_editor.traits.lifestyle_perk_martial.t:1 "军事特质"
  dp_char_editor.traits.lifestyle_perk_stewardship.t:1 "管理特质"
  dp_char_editor.traits.lifestyle_perk_intrigue.t:1 "谋略特质"
  dp_char_editor.traits.lifestyle_perk_learning.t:1 "学识特质"
- dp_char_editor.traits.birth.t:1 "Birth Traits"
+ dp_char_editor.traits.birth.t:1 "出生特质"
  
  dp_char_editor_next:0 "下一页"
  dp_char_editor_back:0 "返回"
  dp_char_editor_main_menu:0 "返回主菜单"
  dp_char_editor_end:0 "完成修改"
  
- dp_char_editor.all.t:1 "修改全部"
- dp_char_editor.martial.t:1 "修改[martial_i]$martial_modifier$"
- dp_char_editor.diplomacy.t:1 "修改[diplomacy_i]$diplomacy_modifier$"
- dp_char_editor.stewardship.t:1 "修改[stewardship_i]$stewardship_modifier$"
- dp_char_editor.intrigue.t:1 "修改[intrigue_i]$intrigue_modifier$"
- dp_char_editor.learning.t:1 "修改[learning_i]$learning_modifier$"
- dp_char_editor.prowess.t:1 "修改[prowess_i] $prowess_modifier$"
- dp_char_editor.skills.d:0 "编辑角色的技能点"
+ dp_char_editor.all.t:1 "编辑全部"
+ dp_char_editor.martial.t:1 "编辑[martial_i]$martial_modifier$"
+ dp_char_editor.diplomacy.t:1 "编辑[diplomacy_i]$diplomacy_modifier$"
+ dp_char_editor.stewardship.t:1 "编辑[stewardship_i]$stewardship_modifier$"
+ dp_char_editor.intrigue.t:1 "编辑[intrigue_i]$intrigue_modifier$"
+ dp_char_editor.learning.t:1 "编辑[learning_i]$learning_modifier$"
+ dp_char_editor.prowess.t:1 "编辑[prowess_i] $prowess_modifier$"
+ dp_char_editor.skills.d:0 "编辑选定角色的技能点"
  
  dp_char_editor.yes:0 "是"
- dp_char_editor.no:0 "不"
+ dp_char_editor.no:0 "否"
  
- dp_char_editor.skill.add10:0 "增加点数:#P 10#!"
- dp_char_editor.skill.add5:0 "增加点数:#P 5#!"
- dp_char_editor.skill.add1:0 "增加点数:#P 1#!"
- dp_char_editor.skill.minus1:0 "减少点数:#N -1#!"
- dp_char_editor.skill.minus5:0 "减少点数:#N -5#!"
- dp_char_editor.skill.minus10:0 "减少点数:#N -10#!"
+ dp_char_editor.skill.add10:0 "增加技能点:#P 10#!"
+ dp_char_editor.skill.add5:0 "增加技能点:#P 5#!"
+ dp_char_editor.skill.add1:0 "增加技能点:#P 1#!"
+ dp_char_editor.skill.minus1:0 "减少技能点:#N -1#!"
+ dp_char_editor.skill.minus5:0 "减少技能点:#N -5#!"
+ dp_char_editor.skill.minus10:0 "减少技能点:#N -10#!"
  
  dp_char_editor.traits.education:0 "教育特质"
  dp_char_editor.traits.personality:0 "个性特质"
@@ -125,23 +126,24 @@
  dp_char_editor.presents.ghostly:0 "白化病+纺锤身形(让其他人觉得恐怖)"
  
  dp_char_editor.presents.innovation.t:0 "文化革新"
- dp_char_editor.presents.innovation.d:0 "Add all cultural innovations of a specific era."
- dp_char_editor_presents_innovation_regional.t:0 "Innovations: Regional"
- dp_char_editor.presents.innovation_regional.d:0 "Add all regional cultural innovations of a specific era."
- dp_char_editor_presents_innovation_regional_TT:0 "Shows a menu where you can choose an era to add all cultural and regional innovations for."
- dp_char_editor_presents_innovation_select.t:0 "Innovations: Select"
- dp_char_editor.presents.innovation_select.d:0 "Select an era to pick which innovations to add or remove."
- dp_char_editor_presents_innovation_select_TT:0 "Shows a menu where you can choose individual innovations to give a culture, organized into seperate options for each era."
+ dp_char_editor.presents.innovation.d:0 "添加特定时代的所有文化革新。"
+ dp_char_editor_presents_innovation_regional.t:0 "革新：地域"
+ dp_char_editor.presents.innovation_regional.d:0 "添加特定时代的所有地域文化革新"
+ dp_char_editor_presents_innovation_regional_TT:0 "显示一个菜单，可以在其中选择一个时代来添加所有文化和地区创新"
+ dp_char_editor_presents_innovation_select.t:0 "革新：自选"
+ dp_char_editor.presents.innovation_select.d:0 "选中一个时代，以挑选要添加或删除的革新"
+ dp_char_editor_presents_innovation_select_TT:0 "显示一个菜单，可以在其中为文化选择提供单个革新，每个时代都有不同的选项。"
 
  tribal_innovation_decision:0 "文化革新: 部落时期"
  early_innovation_decision:0 "文化革新: 中世纪早期"
  high_innovation_decision:0 "文化革新: 中世纪盛期"
  late_innovation_decision:0 "文化革新: 中世纪晚期"
- tribal_regional_innovation_decision:0 "Regional: Tribal"
- early_regional_innovation_decision:0 "Regional: Early Medival"
- high_regional_innovation_decision:0 "Regional: High Medival"
- late_regional_innovation_decision:0 "Regional: Late Medival"
+ tribal_regional_innovation_decision:0 "地域：部落时期"
+ early_regional_innovation_decision:0 "地域：中世纪早期"
+ high_regional_innovation_decision:0 "地域：中世纪盛期"
+ late_regional_innovation_decision:0 "地域：中世纪晚期"
  
+
  no_lifestyle_diplomacy:0 "外交 (用于停止通知)"
  no_lifestyle_martial:0 "军事 (用于停止通知)"
  no_lifestyle_stewardship:0 "管理 (用于停止通知)"
@@ -207,7 +209,7 @@
  monthly_intrigue_xp:0 "[intrigue_i] $MOD_MONTHLY_LIFESTYLE_XP_GAIN_MULT$"
  monthly_learning_xp:0 "[learning_i] $MOD_MONTHLY_LIFESTYLE_XP_GAIN_MULT$"
  
- modifier_mult_tag:0 "#weak (系数)#!"
+ modifier_mult_tag:0 "#weak (倍数)#!"
  modifier_baron_tag:0 "#weak (包括男爵领)#!"
  modifier_ex_heir_tag:0 "#weak (不含继承人)#!"
  
@@ -561,9 +563,9 @@
  prisoner_opinion_neg:0 "$MOD_PRISONER_OPINION$"
  player_heir_opinion_neg:0 "$MOD_PLAYER_HEIR_OPINION$"
  child_opinion_neg:0 "$MOD_CHILD_OPINION$"
- child_except_player_heir_opinion_neg:0 "$MOD_CHILD_EXCEPT_PLAYER_HEIR_OPINION$ (不含继承人)"
+ child_except_player_heir_opinion_neg:0 "$MOD_CHILD_EXCEPT_PLAYER_HEIR_OPINION$ (Excluding Heir)"
  eligible_child_opinion_neg:0 "$MOD_ELIGIBLE_CHILD_OPINION$"
- eligible_child_except_player_heir_opinion_neg:0 "$MOD_ELIGIBLE_CHILD_EXCEPT_PLAYER_HEIR_OPINION$ (不含继承人)"
+ eligible_child_except_player_heir_opinion_neg:0 "$MOD_ELIGIBLE_CHILD_EXCEPT_PLAYER_HEIR_OPINION$ (Excluding Heir)"
  county_opinion_neg:0 "$MOD_COUNTY_OPINION_ADD$"
  different_faith_county_opinion_mult_neg:0 "$MOD_COUNTY_OPINION_DIFFERENT_FAITH_MULT$"
  county_opinion_even_if_baron_neg:0 "$MOD_COUNTY_OPINION_ADD$ $modifier_baron_tag$"
