--- a/localization/simp_chinese/LIT_scripted_effects_l_chinese.yml
+++ b/localization/simp_chinese/LIT_scripted_effects_l_chinese.yml
@@ -1,5 +1,5 @@
 ﻿l_chinese:
 ### LITHANE Scripted Effects
 
- LIT_learned_trait_check_max_TT:1 "This trait is already max level."
- LIT_learned_trait_check_missing_TT:1 "The selected character doesn't have this trait."
+ LIT_learned_trait_check_max_TT:1 "这个特质已达最高级别"
+ LIT_learned_trait_check_missing_TT:1 "选择的角色尚未拥有此特性"
